--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-bedrock": "^3.848.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.848.0",
     "dotenv": "^17.2.0"
   }
 }
