--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# AWS Bedrock Config
+BEDROCK_API_KEY=
+BEDROCK_MODEL_ID=
+BEDROCK_REGION=
